Fri Aug 29 10:58:45 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/dump_field_actions.py: Sort the fields, and allow a
	  specific field to be requested.

Fri Aug 29 10:39:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/dump_field_actions.py: Add script to dump the field actions
	  for a database.
	* utils/replay_search_log.py: Correct copyright date.

Fri Aug 29 09:54:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/replay_search_log.py: Add utility to replay a search log,
	  and time it.

Fri Aug 29 09:24:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Copy the __serialised member correctly when a
	  Query is copied.

Fri Aug 29 09:08:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix indentation.

Thu Aug 28 18:18:53 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "internal" interface to allow
	  building ELITE_SET queries from raw xapian terms.

Thu Aug 28 17:29:24 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py,xappy/unittests/query_serialise.py: Add support
	  and tests for serialising the result of xappy.Query()

Thu Aug 28 13:49:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py,xappy/searchconnection.py: Add methods to allow a
	  query to be serialised and unserialised.
	* xappy/unittests/query_serialise.py: Test the new query
	  serialisation stuff.

Tue Aug 26 16:59:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix generation of field associations for
	  EXACT and FACET fields - was forgetting to add the term prefix.
	* xappy/searchconnection.py: Avoid returning relevant data items
	  more than once.

Tue Aug 26 09:07:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Remove a bit of debugging code which
	  broke backwards compatibility.
