@@ -1,3 +1,8 @@
+Fri Aug 29 11:22:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* utils/dump_field_actions.py: Output the slot and prefix
+	  information, too.
+
 Fri Aug 29 10:58:45 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/dump_field_actions.py: Sort the fields, and allow a
